@@ -88,13 +88,6 @@ TEA_CONFIG_CFLAGS
 
 TEA_ENABLE_SYMBOLS
 
-if test "${SHARED_BUILD}" = "1" ; then
-    CFLAGS='${CFLAGS_DEFAULT} ${CFLAGS_WARNING} ${SHLIB_CFLAGS}'
-else
-    CFLAGS='${CFLAGS_DEFAULT} ${CFLAGS_WARNING}'
-fi
-AC_SUBST(SHARED_BUILD)
-
 AC_DEFINE(USE_TCL_STUBS)
 
 TEA_MAKE_LIB
